Changes path to tacho.js

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <input type="range" id="demoInput" min="0" max="100" value="0">
     </div>
 
-    <script src="/tacho.js"></script>
+    <script src="tacho.js"></script>
     <script>
       window.onload = function(){
         var demo = document.getElementById('demo');
